# tmp_use_before_mod

./: .gitignore  Cargo.toml  README.md  not_working.rs  working.rs
