[package]
name = "example"
version = "0.1.0"
authors = ["jakubs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"

[[bin]]
name = "not_working"
path = "not_working.rs"

[[bin]]
name = "working"
path = "working.rs"

